--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,9 +9,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.7.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shpokas-io/runtrackr-backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/shpokas-io/runtrackr-backend/issues"
+  },
+  "homepage": "https://github.com/shpokas-io/runtrackr-backend#readme",
+  "description": ""
 }
