--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.7.2"
+    "mongoose": "^8.7.2",
+    "querystring": "^0.2.1"
   },
   "repository": {
     "type": "git",
